usb-updatefunktion geaendert und wieder aktiviert